Implémentation de urlServiceTest